cabal-version:      2.4
name:               Haskell
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable Haskell
    main-is:          Main.hs
    other-modules: Security
    build-depends:    base ^>=4.16.4.0, network == 3.1.2.9, bytestring
    hs-source-dirs:   app
    default-language: Haskell2010